2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
	*	Dialog_About.cc: made "Translated by" tab a bit more sensible, also added an translator-credits string.

2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
	*	Operation.h,
		Operation.cc,
		Partition.h,
		Partition.cc
		Dialog_Partition_Copy.cc,
		Dialog_Partition_Info.cc,
		Dialog_Partition_New.cc,
		Win_GParted.cc: prepared "copy of" an "New Partition" for i18n and did some cleanups on the way...
		I believe all relevant strings are now properly marked for translation.	
		
2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
	*	Dialog_Progress.h,
		Operation.h,
		Partition.h,
		Win_GParted.h,
		Dialog_Base_Partition.cc,
		Dialog_Partition_Copy.cc,
		Dialog_Partition_Info.cc,
		Dialog_Partition_New.cc,
		Dialog_Partition_Resize_Move.cc,
		Dialog_Progress.cc,
		Operation.cc,
		Win_GParted.cc: changed some sentences on translators request
	*	compose,
		compose/ucompose.hpp : added composelib to provide sprintf functionality in C++ style
	*	po/POTFILES.in : added ../src/main.cc

2004-09-23  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-09-23  Bart Hakvoort  <gparted@users.sf.net>

	* configure.in,
	   include/i18n.h: fixed some problems with i18n.

2004-09-23  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added "pt_BR" to ALL_LINGUAS.

2004-09-23  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.


**changes**
- replaced some 'dunglish' terms with more decent english. (Thanks to Tino Meinen)
- cleaned up autoconf stuff a bit
- gparted now gets installed in the sbin/ instead of bin/ (1023181)
- maximum amount of primary partition isn't static anymore, it gets asked from the partition table.
- lots of internal code cleanups. this improved performance and stability.
- doubleclick now invokes infodialog
- added .desktop file so gparted is accessible from Gnome/Kde menus (thanks to Stephane LOEUILLET, 1023176)

**fixes**