@@ -1,4 +1,9 @@
 2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
+	*	src/Win_GParted.h,
+		src/Win_GParted.cc: removed expander. The diskinfo is now always visible.
+	*	src/Dialog_Partition_Info.cc: fixed small bug with overlapping text. 
+
+2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
 	*	Dialog_About.cc: made "Translated by" tab a bit more sensible, also added an translator-credits string.
 
 2004-09-25  Bart Hakvoort  <gparted@users.sf.net>
